Updating the outline for the Onward paper to include a diagram using the interpretation/execution metaphor.
Related to xwsxethan/MusicScoring#73 and #74.

--- a/Documents/Onward Paper/HolderOnward2015.bib
+++ b/Documents/Onward Paper/HolderOnward2015.bib
@@ -13,7 +13,7 @@
  acmid = {2509541},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {mobile sensing, sensor api},
+ keywords = {mobile sensing, sensor api}
 } 
 
 @inproceedings{DingLi14,
@@ -31,7 +31,7 @@
  acmid = {2568321},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {Energy optimization, Web applications},
+ keywords = {Energy optimization, Web applications}
 } 
 
 @inproceedings{Pathak12,
@@ -49,7 +49,7 @@
  acmid = {2168841},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {Eprof, energy, mobile, smartphones},
+ keywords = {Eprof, energy, mobile, smartphones}
 } 
 
 @inproceedings{Pathak11,
@@ -67,7 +67,7 @@
  acmid = {1966460},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {energy, mobile, smartphone},
+ keywords = {energy, mobile, smartphone}
 } 
 
 @inproceedings{PathakAwake12,
@@ -85,7 +85,7 @@
  acmid = {2307661},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {energy, energy-bug, mobile, nosleep-bug, smartphones},
+ keywords = {energy, energy-bug, mobile, nosleep-bug, smartphones}
 }  
 
 @inproceedings{Jindal13,
@@ -103,7 +103,7 @@
  doi = {10.1145/2525526.2525845},
  acmid = {2525845},
  publisher = {ACM},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
 } 
 
 @inproceedings{Flinn99,
@@ -154,7 +154,7 @@
  acmid = {2000026},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {3G networks, UMTS, crosslayer analysis, radio resource optimization, rrc state machine, smartphone applications},
+ keywords = {3G networks, UMTS, crosslayer analysis, radio resource optimization, rrc state machine, smartphone applications}
 } 
 
 @inproceedings{Ding13,
@@ -212,7 +212,7 @@ address = {Berkeley, CA}
  acmid = {2307640},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {continuous context-aware applications, rule-based optimization, sensor-rich mobile environment},
+ keywords = {continuous context-aware applications, rule-based optimization, sensor-rich mobile environment}
 } 
 
 @inproceedings{Nikzad14,
@@ -230,7 +230,7 @@ address = {Berkeley, CA}
  acmid = {2568288},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {Mobile applications, annotations, energy-efficiency, hardware monitoring, programming},
+ keywords = {Mobile applications, annotations, energy-efficiency, hardware monitoring, programming}
 } 
 
 @inproceedings{Kwon13,
@@ -248,7 +248,7 @@ address = {Berkeley, CA}
  acmid = {2514882},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {energy-efficiency},
+ keywords = {energy-efficiency}
 } 
 
 @article{Tilevich14,
@@ -268,7 +268,7 @@ address = {Berkeley, CA}
  acmid = {2608108},
  publisher = {IEEE Computer Society Press},
  address = {Los Alamitos, CA, USA},
- keywords = {Runtime,Mobile communication,Mobile computing,Programming,Energy efficiency,Optimization,Adaptive systems,Cloud computing,runtime adaptation,energy efficiency,cloud offloading,distributed computing},
+ keywords = {Runtime,Mobile communication,Mobile computing,Programming,Energy efficiency,Optimization,Adaptive systems,Cloud computing,runtime adaptation,energy efficiency,cloud offloading,distributed computing}
 } 
 
 @INPROCEEDINGS{Chang11, 
@@ -313,7 +313,7 @@ ISSN={1045-9219},
  acmid = {1572228},
  publisher = {Sage Publications, Inc.},
  address = {Thousand Oaks, CA, USA},
- keywords = {HPC challenge, energy efficiency, exaflop, power consumption, power-performance profiling},
+ keywords = {HPC challenge, energy efficiency, exaflop, power consumption, power-performance profiling}
 } 
 
 @inproceedings{BoLi14,
@@ -349,7 +349,7 @@ ISSN={1045-9219},
  acmid = {1966473},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {migration, mobile cloud computing, offloading, partitioning, smartphones},
+ keywords = {migration, mobile cloud computing, offloading, partitioning, smartphones}
 } 
 
 @inproceedings{Cuervo10,
@@ -367,7 +367,7 @@ ISSN={1045-9219},
  acmid = {1814441},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {code offload, energy management, partitioning, smartphones},
+ keywords = {code offload, energy management, partitioning, smartphones}
 }
 
 @inproceedings{Gordon12,
@@ -383,7 +383,7 @@ ISSN={1045-9219},
  url = {http://dl.acm.org/citation.cfm?id=2387880.2387890},
  acmid = {2387890},
  publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
+ address = {Berkeley, CA, USA}
 } 
 
 @MISC{GS,
@@ -682,7 +682,7 @@ language={English}
  doi = {10.1145/1941487.1941504},
  acmid = {1941504},
  publisher = {ACM},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
 } 
 
 @inproceedings{CTsplash,
@@ -700,7 +700,7 @@ language={English}
  acmid = {2514879},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {android, automated, cloud, emulate, mobile, multi-platform, replay, windows phone},
+ keywords = {android, automated, cloud, emulate, mobile, multi-platform, replay, windows phone}
 } 
 
 @inproceedings{CTase,
@@ -736,7 +736,7 @@ language={English}
  acmid = {2095093},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {gui models, mobile devices and platforms, porting, reverse engineering},
+ keywords = {gui models, mobile devices and platforms, porting, reverse engineering}
 } 
 
 @inproceedings{heitkotterComparison,
@@ -767,7 +767,7 @@ language={English}
  acmid = {2480464},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {business app, mobile, model-driven software development},
+ keywords = {business app, mobile, model-driven software development}
 } 
 
 @inproceedings{html5compare,
@@ -847,5 +847,13 @@ language={English}
  doi = {10.1145/1476589.1476628},
  acmid = {1476628},
  publisher = {ACM},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
 } 
+
+@Misc{GithubMusicScoring,
+author = {Holder, Ethan},
+title = {MusicScoring},
+howpublished = {\url{https://github.com/xwsxethan/MusicScoring}},
+month = {2},
+year = {2015},
+}
