--- a/Documents/Onward Paper/HolderOnward2015.tex
+++ b/Documents/Onward Paper/HolderOnward2015.tex
@@ -72,6 +72,10 @@ basicstyle=\footnotesize\ttfamily, showstringspaces=false, morecomment=[l], math
 \authorinfo{Amy Gillick}
 					 {Department of Music at Virginia Tech}
 					 {agillick@vt.edu}
+					 
+\authorinfo{R. Ben Knapp}
+					 {Center for the Arts at Virginia Tech}
+					 {benknapp@vt.edu}
 
 \maketitle
 
